# avalanche-types-rs

./: CODEOWNERS  Cargo.toml  LICENSE  README.md
.github/workflows/: test-and-release.yml
artifacts/: ewoq.key.json  test.insecure.secp256k1.key.infos.json  test.insecure.secp256k1.key.infos.mnemonic.json  test.insecure.secp256k1.key.infos.no.mnemonic.json
examples/: client_c.rs  client_info.rs  client_p.rs  client_x.rs  evm_abi_calldata.rs  evm_contract_counter_get_last.rs  evm_contract_counter_increment.rs  evm_contract_counter_increment_append_calldata.rs  evm_contract_counter_increment_forwarder_execute.rs  evm_contract_counter_increment_forwarder_proxy_call.rs  evm_contract_counter_increment_forwarder_relay_eip712.rs  evm_contract_counter_relay_eip712.rs  evm_contract_erc20_simple_token_increase_allowance_forwarder_relay_eip712.rs  evm_contract_erc20_simple_token_transfer_from_forwarder_relay_eip712.rs  evm_contract_erc721_my_token_approve_forwarder_relay_eip712.rs  evm_contract_erc721_my_token_mint_forwarder_relay_eip712.rs  evm_contract_erc721_my_token_transfer_from_forwarder_relay_eip712.rs  evm_contract_forwarder_execute_counter_increment.rs  evm_contract_forwarder_get_nonce.rs  evm_contract_forwarder_proxy_call_counter_increment.rs  evm_contract_forwarder_proxy_call_counter_increment_append_calldata.rs  evm_contract_registry.rs  evm_contract_registry_relay_eip712.rs  evm_contract_simple_registry_forwarder_execute.rs  evm_contract_simple_registry_register.rs  evm_contract_simple_registry_register_forwarder_execute.rs  evm_contract_simple_registry_register_forwarder_relay_eip712.rs  evm_contract_voter_vote_a_forwarder_relay_eip712.rs  evm_eip712_domain_separator_request_type_hash.rs  evm_eip712_gsn_domain_separator.rs  evm_eip712_gsn_request_type_hash.rs  evm_eip712_gsn_send_relay_request.rs  evm_send_eip712.rs  evm_send_eip712_relay_request.rs  evm_send_raw_transaction_eip1559_hot_key.rs  evm_send_raw_transaction_eip1559_kms_aws.rs  jsonrpc_client_evm.rs  jsonrpc_client_info.rs  jsonrpc_client_p.rs  jsonrpc_client_x.rs  (+11 more)
scripts/: examples.sh  protobuf_codegen.sh  tests.unit.sh
src/: constants.rs  errors.rs  lib.rs  node.rs  units.rs  verify.rs  version.rs
src/avalanchego/: config.rs  genesis.rs  mod.rs
src/avm/txs/: export.rs  fx.rs  import.rs  mod.rs  vertex.rs
src/choices/: decidable.rs  mod.rs  status.rs  test_decidable.rs
src/client/: evm.rs  health.rs  info.rs  mod.rs  p.rs  x.rs
src/client/wallet/: mod.rs
src/codec/: mod.rs
src/codec/serde/: base64_bytes.rs  hex_0x_big_int.rs  hex_0x_bytes.rs  hex_0x_primitive_types_h160.rs  hex_0x_primitive_types_h256.rs  hex_0x_primitive_types_u256.rs  hex_0x_u64.rs  hex_0x_utxo.rs  mod.rs  rfc_3339.rs
src/coreth/: chain_config.rs  config.rs  genesis.rs  mod.rs
src/eth/: mod.rs
src/eth/txs/: mod.rs
src/evm/: mod.rs
src/evm/abi/: mod.rs
src/evm/eip1559/: mod.rs
src/evm/eip712/: gsn.rs  mod.rs
src/evm/foundry/: forge.rs  mod.rs
src/evm/txs/: eip1559.rs  legacy.rs  mod.rs
src/formatting/: mod.rs
src/formatting/serde/: hex.rs  hex_0x_big_int.rs  hex_0x_bytes.rs  hex_0x_utxo.rs  mod.rs  rfc_3339.rs
src/hash/: mod.rs
src/ids/: bag.rs  bits.rs  mod.rs  node.rs  short.rs
src/jsonrpc/: admin.rs  avm.rs  common.rs  eth.rs  evm.rs  health.rs  info.rs  mod.rs  platformvm.rs
src/jsonrpc/client/: admin.rs  evm.rs  health.rs  info.rs  mod.rs  p.rs  url.rs  x.rs
src/key/: mod.rs
src/key/bls/: mod.rs  private_key.rs  public_key.rs  signature.rs
src/key/cert/: x509.rs
src/key/secp256k1/: address.rs  aws_kms.rs  keychain.rs  libsecp256k1.rs  mnemonic.rs  mod.rs  private_key.rs  public_key.rs  signature.rs
src/message/: accepted.rs  accepted_frontier.rs  accepted_state_summary.rs  accepted_state_summary_gzip.rs  ancestors.rs  ancestors_gzip.rs  app_gossip.rs  app_gossip_gzip.rs  app_request.rs  app_request_failed.rs  app_request_gzip.rs  app_response.rs  app_response_gzip.rs  chits.rs  chits_v2.rs  compress.rs  connected.rs  disconnected.rs  get.rs  get_accepted.rs  get_accepted_failed.rs  get_accepted_frontier.rs  get_accepted_frontier_failed.rs  get_accepted_state_summary.rs  get_accepted_state_summary_failed.rs  get_accepted_state_summary_gzip.rs  get_ancestors.rs  get_ancestors_failed.rs  get_failed.rs  get_state_summary_frontier.rs  get_state_summary_frontier_failed.rs  gossip_request.rs  mod.rs  notify.rs  peerlist.rs  peerlist_gzip.rs  ping.rs  pong.rs  pull_query.rs  push_query.rs  (+8 more)
src/packer/: ip.rs  mod.rs
src/platformvm/: mod.rs
src/platformvm/txs/: add_permissionless_validator.rs  add_subnet_validator.rs  add_validator.rs  create_chain.rs  create_subnet.rs  export.rs  import.rs  mod.rs  status.rs
src/proto/: buf.gen.yaml  grpcutil.rs  mod.rs
src/proto/pb/: aliasreader.rs  aliasreader.tonic.rs  appsender.rs  appsender.tonic.rs  google.api.rs  google.protobuf.rs  helloworld.rs  helloworld.tonic.rs  http.responsewriter.rs  http.responsewriter.tonic.rs  http.rs  http.tonic.rs  io.prometheus.client.rs  io.reader.rs  io.reader.tonic.rs  io.writer.rs  io.writer.tonic.rs  keystore.rs  keystore.tonic.rs  messenger.rs  messenger.tonic.rs  mod.rs  net.conn.rs  net.conn.tonic.rs  p2p.rs  plugin.rs  plugin.tonic.rs  rpcdb.rs  rpcdb.tonic.rs  sharedmemory.rs  sharedmemory.tonic.rs  teleporter.rs  teleporter.tonic.rs  validatorstate.rs  validatorstate.tonic.rs  vm.rs  vm.tonic.rs
src/rpcchainvm/: context.rs  health.rs  mod.rs  plugin.rs
src/rpcchainvm/common/: apphandler.rs  http_handler.rs  mod.rs  vm.rs
src/rpcchainvm/concensus/: snowman.rs
src/rpcchainvm/database/: errors.rs  mod.rs
src/rpcchainvm/http/: client.rs  mod.rs  server.rs
src/rpcchainvm/snow/: mod.rs
src/rpcchainvm/snowman/: block.rs
src/rpcchainvm/utils/: grpc.rs  mod.rs
src/subnet/: mod.rs
src/subnet_evm/: chain_config.rs  config.rs  genesis.rs
src/txs/: mod.rs  raw.rs  transferable.rs  utxo.rs
src/utils/: mod.rs  urls.rs  version.rs
src/wallet/: mod.rs
src/xsvm/: genesis.rs
tests/: integration_tests.rs
tests/rpc/: common.rs  mod.rs
tests/rpcchainvm/: common.rs  mod.rs  shutdown.rs
(+94 files in other folders)
